falta solo iconos!

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
     <div class="card-body">
         <a href = "usuari">Login amb Compte de Google DAW2</a>
 
-        <a class="btn btn-primary" href="/client" role="button">Formulari Client</a>
+        <a class="btn btn-primary" href="/prev" role="button">Formulari Client</a>
     </div>
 </div>
 </div>
